fixed mappers and endpoint useers get working
