# HolidaysApp-Backend/driving/api-rest/src/main/java/com/rob/driving/mappers/UserDTOMapper.java
@@ -1,0 +1,18 @@
+package com.rob.driving.mappers;
+
+import com.rob.domain.models.User;
+import com.rob.driving.dtos.UserDTO;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
+import org.springframework.stereotype.Component;
+
+
+@Mapper(componentModel = "spring", uses = {RoleDTOMapper.class})
+public interface UserDTOMapper {
+
+    @Mapping(source = "role" , target = "role")
+    User toUser(UserDTO userDTO);
+
+    @Mapping(source = "role" , target = "role")
+    UserDTO toUserDTO(User user);
+}
